apps/navidrome/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app.kubernetes.io/name: navidrome
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: navidrome
        app.kubernetes.io/name: navidrome
        app.kubernetes.io/component: navidrome
        app.kubernetes.io/instance: navidrome-prod
        app.kubernetes.io/part-of: navidrome
      annotations:
        prometheus.io/port: "4533"
        prometheus.io/scrape: "true"
    spec:
      securityContext:
        runAsUser: 61523
        runAsGroup: 61523
        fsGroup: 61523
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: "navidrome"
          image: "ghcr.io/navidrome/navidrome:0.64.2"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 61523
            runAsGroup: 61523
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "256Mi"
              cpu: "5m"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 4533
              name: "navidrome"
          livenessProbe:
            httpGet:
              path: "/ping"
              port: "navidrome"
            initialDelaySeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/ping"
              port: "navidrome"
            initialDelaySeconds: 5
          volumeMounts:
            - name: "data"
              mountPath: "/data"
            - name: "music"
              mountPath: "/music"
            - name: "tmp"
              mountPath: "/tmp"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "location"
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - name: "data"
          emptyDir:
            sizeLimit: "5Gi"
        - name: "music"
          emptyDir:
            sizeLimit: "5Gi"
        - name: "tmp"
          emptyDir:
            sizeLimit: "1Gi"
