apps/navidrome/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "navidrome"
spec:
  podSelector: {}
  egress: []
  ingress:
    - ports:
        - protocol: "TCP"
          port: "navidrome"
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "monitoring"
          podSelector:
            matchLabels:
              app.kubernetes.io/name: "prometheus"
